# controller-db-gui

./: .gitignore  CMakeLists.txt  build.bat
include/P7/: GTypes.h  P7_Version.h
include/odbc/: logger.hpp  odbc.hpp  odbc_data.hpp
lib/: Txt.txt
src/: AddForm.cpp  AddForm.hpp  CMakeLists.txt  DbTable.cpp  DbTable.hpp  MyWidgets.hpp  db.hpp  drivers_table.cpp  main.cpp  prompt_db.cpp  prompt_db.hpp  table_corr.cpp  table_weight.cpp  tables.hpp
